# ji

./: .gitignore  CMakeLists.txt  README.md  correlations.py  deep-research-report.md  deep-research-report2.md  deep-research-report3.md  md  sweep_runtime_restart.sh  tt
cache/: local_profile.sample.json
cpujitter-qualifier/: .gitignore  CMakeLists.txt  README.md
cpujitter-qualifier/configs/: sweep_config.json
cpujitter-qualifier/exported_profiles/: selected_profile.example.json
cpujitter-qualifier/include/qualifier/: qualifier.h
cpujitter-qualifier/scripts/: run_qualifier.sh
cpujitter-qualifier/src/: config_loader.c  evaluator.c  exporter.c  main.c  nist_hook.c  platform_detect.c  qualifier.c  qualifier_internal.h
cpujitter-qualifier/tests/: smoke_test.c
docs/: GUIA_USO_ES.md
examples/: dice_app.c
h/: CMakeLists.txt  autotune.c  hello.c  k
include/cpujitter/: cpujitter.h
profiles/: index.json  linux_aarch64_generic_arm_v1.json  linux_x86_64_generic_baremetal_v1.json  linux_x86_64_generic_vm_v1.json
scripts/: fetch_external_deps.sh
src/: cache.c  cpujitter.c  cpujitter_internal.h  entropy_backend.c  json_profiles.c  platform_detect.c  recalibrate.c
tests/: test_cpujitter.c  test_profile_matching.c
